# raytracer

./: Cargo.toml  README.md  output.ppm
src/: lib.rs  main.rs
src/gui/: app.rs  mod.rs
src/materials/: diffuse.rs  emissive.rs  mod.rs  reflective.rs
src/objects/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
src/renderer/: bvh.rs  camera.rs  color.rs  mod.rs  ray.rs  scene.rs
